# carbon-scribe

./: README.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: carbon-asset-factory.yml  ci-multi-layer.yml  compliance-engine.yml  corporate-platform-backend.yml  corporate-portal-web.yml  deploy-staging.yml  emergency-rollback.yml  performance-test.yml  project-portal-backend.yml  project-portal-web.yml  release.yml  security-audit.yml  verifiable-registry.yml  verification-pipeline.yml
corporate-platform/corporate-platform-backend/: .env.example  README.md  package-lock.json  package.json  prisma.config.js  tsconfig.json
corporate-platform/corporate-platform-backend/prisma/: schema.prisma  seed.ts
project-portal/project-portal-backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
project-portal/project-portal-web/: README.md  all_files.txt  next.config.ts  package-lock.json  package.json
stellar-core/verifiable-registry/contracts/registry_contract/: Cargo.toml
stellar-core/verifiable-registry/contracts/registry_contract/src/: events.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
stellar-core/verifiable-registry/contracts/registry_contract/test_snapshots/test/: test_anchor_document.1.json  test_anchor_document_batch.1.json  test_anchor_document_multiple_versions.1.json  test_get_document_history.1.json  test_get_projects_by_anchorer.1.json  test_initialization.1.json  test_register_duplicate_project.1.json  test_transfer_project_ownership.1.json
(+392 files in other folders)
