[package]
name = "registry_contract"
version = "0.0.0"
edition = "2021"
description = "Registry contract for project metadata anchoring"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
